--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -6,7 +6,7 @@
 <% if @categories.present? %>
   <ul class="categories_main">
       <li class = "logo">
-        <%= image_tag('Logo_mecnieri.svg', class: 'logo_image') %>
+        <%= inline_svg('Logo_mecnieri.svg', class: 'logo_image')%>
 
         <!-- hard-coded; will probably have to be fixed         -->
         <p class="logo-text">
@@ -15,9 +15,9 @@
       </li>
 
     <% @categories.each do |category| %>
-      <li>
+      <li class="category-item">
         <!-- had to put image first, then text. couldn't find a good way to position them if they were in reverse order -->
-          <%= link_to(image_tag(category_icon_path(category.slug), class: 'categoty_image'), experiments_path(category: category.slug))%>
+          <%= link_to(inline_svg(category_icon_path(category.slug), class: 'categoty_image'), experiments_path(category: category.slug))%>
           <%= link_to category.title, experiments_path(category: category.slug), class: 'index_text' %>
       </li>
     <% end %>
