--- a/app/views/root/_experiment_list.html.erb
+++ b/app/views/root/_experiment_list.html.erb
@@ -5,7 +5,9 @@
         <%= link_to experiment_path(experiment) do %>
           <% if experiment.thumbnail1.exists? %>
               <%= image_tag(experiment.thumbnail1.url('big'), alt: experiment.title, class: "exp-thumbnail1") %>
+              <div id = exp_second_image_helper>
               <%= image_tag(experiment.thumbnail2.url('big'), alt: experiment.title, class: "exp-thumbnail2") %>
+              </div>
           <% end %>
           <div class="exp-text">
           <div class="exp-title category-background-color <%= params[:category] %>">
