--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -118,7 +118,12 @@ body.root.experiments .exp-categories .index_text a:hover{
 }
 
 }
-
+@media (min-width:1780px){
+    body.root.experiments .exp-categories .categories-list {
+    margin-right: 2vw;
+    margin-left: 2vw;
+}
+}
 @media (max-width: 1075px) {
   body.root.experiments .exp-categories .categories-list {
     margin-right: 0vw;
@@ -134,8 +139,32 @@ body.root.experiments .exp-categories .index_text a:hover{
     padding-left: 0px;
   }
 }
-
 @media (max-width: 790px) {
+  body.root.experiments .exp-categories .categories-list {
+    margin-right: 3vw;
+    margin-left: 3vw;
+    width: 40%;
+  }
+  body.root.experiments .exp-categories .logo {
+    margin-right: 3vw;
+    margin-left: 3vw;
+    width: 40%;
+  }
+
+  body.root.experiments .exp-categories .categoty_image {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  body.root.experiments .exp-categories .logo_image {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  body.root.experiments .exp-categories .index_text {
+    font-size: 14px
+}
+}
+
+@media (max-width: 400px) {
   body.root.experiments .exp-categories .categories-list{
     width: 90%
   }
@@ -268,7 +297,7 @@ body.root.experiments .exp-list .big .exp-text {
   width: 350px;
   top: 370px;
 }
-#exp_second_image_helper{
+.big #exp_second_image_helper{
 
   height: 400px;
   width: 600px;
