--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -246,7 +246,7 @@ body.root.experiments .exp-list li:hover .exp-thumbnail2{
   -moz-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
-  
+
   -moz-transition: all 0.5s;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -324,26 +324,13 @@ body.root.experiments .exp-list .big .exp-text {
 }
 }
 
-#more-links-sp {
+#load_more_link {
   display: block;
   height: 60px;
-  width: 80vw;
   background-color: #2e2d2c;
-  position: relative;
-  bottom: 2px;
-  left: 50%;
-  transform: translateX(-50%);
   margin-top: 100px;
-  clear: both;
-}
-#load_more_link {
-  width:240px;
-  z-index: 100;
-  position: absolute;
-  top: 15px;
+  padding-top: 12px;
   font-size: 25px;
-  left: 50%;
-  transform: translateX(-50%);
   color: white;
 }
 #load_more_link:hover{
@@ -356,6 +343,6 @@ body.root.experiments .exp-list li:hover {
   -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
   box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-  
+
  }
 }
