--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -9,7 +9,7 @@
         <%= inline_svg('Logo_mecnieri.svg', class: 'logo_image')%>
 <!-- hard-coded; please fix this  -->
         <p class="hover-text">
-        აღმოაჩინე მეცნიერი!
+        <%= t('.discover') %>
         </p>
         <p class="logo-text">
           <%= t('.about').html_safe %>
