--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -131,12 +131,14 @@ body.root.experiments .exp-categories .index_text a:hover{
 }
   body.root.experiments .lcategories_main{
     padding-left: 0px;
+    padding-right: 0px;
   }
 }
 
 @media (max-width: 840px) {
   body.root.experiments .lcategories_main{
     padding-left: 0px;
+    padding-right: 0px;
   }
 }
 @media (max-width: 790px) {
