--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 @import 'bootstrap_and_overrides';
 @import 'index_categories';
 @import 'categories';
+@import 'experiment';
 @import 'formtastic_overrides';
 
 // Font awesome icons
