--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -58,6 +58,7 @@ body.root.experiments .exp-categories .index_text {
   color:inherit;
   left: 50%;
   transform: translateX(-50%);
+  font-family: BebasNeue-Bold;
 }
 
 body.root.experiments .exp-categories .index_text a{
@@ -206,6 +207,8 @@ body.root.experiments .exp-list li{
 body.root.experiments .exp-list .big {
     width: 600px;
     height: 605px;
+    margin-left: 70px;
+    margin-right: 70px;
 }
 
 
@@ -275,12 +278,17 @@ body.root.experiments .exp-list .exp-title{
   background-color: green;
   color: white;
   height: 54px;
+  font-size: 20px;
+  font-family: BebasNeue-Bold;
 }
-
+body.root.experiments .exp-list .big .exp-title{
+  font-size: 24px;
+}
 body.root.experiments .exp-list .exp-description{
   display: block;
   background-color: white;
   color: black;
+  font-family: DejaVuSans;
 }
 /* larger sized experiments*/
 body.root.experiments .exp-list .big {
@@ -306,10 +314,12 @@ body.root.experiments .exp-list .big .exp-text {
   }
 
 /* under 1450px making all experiments same size */
-@media (max-width: 1450px) {
+@media (max-width: 1605px) {
   body.root.experiments .exp-list .big {
     height: 400px;
     width: 426px;
+    margin-left: 15px;
+    margin-right: 15px;
 
 }
 body.root.experiments .exp-list .big .exp-thumbnail1 {
@@ -341,10 +351,18 @@ body.root.experiments .exp-list .big .exp-text {
 
 
 body.root.experiments .exp-list li:hover {
-.exp-description {
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
-  box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+.exp-text {
+  transition: box-shadow 0.3s ease-in-out;
+  -webkit-box-shadow: 0px 0px 29px 18px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 29px 18px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 29px 18px rgba(0,0,0,0.2);
+  transition: box-shadow 0.9s ease-in-out;
 
  }
+}
+body.root.experiments .exp-list li:not(:hover) {
+.exp-text {
+  transition:  0.3s ease-in-out;
+  box-shadow: none;
+}
 }
