--- a/app/views/shared/_experiment_show.html.erb
+++ b/app/views/shared/_experiment_show.html.erb
@@ -27,11 +27,15 @@
 
 <div class="exp-directions">
   <h3><%= t('activerecord.models.direction', count: 999) %></h3>
+  <div class="exp-directions-buttons" data-current-index="0">
+    <span class="direction-previous" data-type="previous"><%= inline_svg('arrow.svg', class: "no-hover category-fill-color #{params[:category]}")%><%= inline_svg('arrow_hover_active.svg', class: "hover category-fill-color #{params[:category]}")%></span>
+    <span class="direction-next active" data-type="next"><%= inline_svg('arrow.svg', class: "no-hover category-fill-color #{params[:category]}")%><%= inline_svg('arrow_hover_active.svg', class: "hover category-fill-color #{params[:category]}")%></span>
+  </div>
   <ul>
-  <% @experiment.directions.sorted.each do |dir| %>
-    <li style="margin-top: 20px;">
+  <% @experiment.directions.sorted.each_with_index do |dir, dir_index| %>
+    <li data-index="<%= dir_index %>" class="exp-direction-item <%= dir_index == 0 ? 'active' : '' %>">
       <% if dir.images.present? %>
-        <ul>
+        <ul class="exp-direction-images">
           <% dir.images.each do |img| %>
             <% if img.image.exists? %>
               <li>
@@ -42,7 +46,12 @@
           <% end %>
         </ul>
      <% end %>
-     <%= simple_format_no_tags(dir.content) %>
+     <div class="exp-direction-index category-background-color <%= params[:category] %>">
+      <%= dir_index +=1 %>
+     </div>
+     <div class="exp-direction-content">
+      <%= simple_format_no_tags(dir.content) %>
+    </div>
     </li>
   <% end %>
   </ul>
