--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,18 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 @import 'components/translated_inputs';
 @import 'components/categories';
 
+
+@font-face
+{
+  font-family: 'BebasNeue-Bold';
+  font-style: normal;
+  src: image-url('fonts/BebasNeue-Bold.otf') format('opentype');
+}
+
+@font-face
+{
+  font-family: 'DejaVuSans';
+  font-style: normal;
+  /*   src: url('/assets/BPG%20DejaVuSans%202.ttf'); */
+  src: image-url('fonts/BPG-DejaVuSans-2.ttf')  format('truetype');
+}
