--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -4,6 +4,24 @@ body.root.experiments .container {
 	padding: 0px;
 	width: 95vw;
 }
+
+body.root.experiments .search-input{
+  background-color: none;
+  border: 0px;
+  box-shadow: none;
+  font-family: 'BebasNeue-Bold';
+  text-align: right;
+  font-size: 20px;
+  /* should box shadow also be removed? */
+
+}
+
+body.root.experiments .about-element{
+  font-family: 'BebasNeue-Bold';
+  font-size: 20px;
+
+}
+
 body.root.experiments .container .main {
 	width: 20%;
 	height: 100px;
