--- a/app/views/application/_navbar_header.html.erb
+++ b/app/views/application/_navbar_header.html.erb
@@ -15,7 +15,7 @@
             </div>
           </form>
         </li>
-        <li><%= link_to t('.about'), about_path  %></li>
+        <li class="about-element"><%= link_to t('.about'), about_path  %></li>
 
         <% if user_signed_in? %>
           <li class="dropdown">
