--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -10,6 +10,7 @@ body.root.experiments .search-input{
   border: 0px;
   box-shadow: none;
   font-family: 'BebasNeue-Bold';
+  color: #323C71;
   text-align: right;
   font-size: 20px;
   /* should box shadow also be removed? */
@@ -19,7 +20,11 @@ body.root.experiments .search-input{
 body.root.experiments .about-element{
   font-family: 'BebasNeue-Bold';
   font-size: 20px;
+  color: #323C71;
 
+}
+body.root.experiments .about-element a {
+  color: #323C71;
 }
 
 body.root.experiments .container .main {
@@ -43,6 +48,7 @@ body.root.experiments .app-footer {
 
 body.root.experiments .exp-categories ul{
   text-align: center;
+  padding-bottom: 40px;
 }
 
 body.root.experiments .exp-categories li{
@@ -98,21 +104,18 @@ body.root.experiments .exp-categories .categories-list {
 }
 
 body.root.experiments .exp-categories li.seled {
-  background-color: #999;
+-moz-border-radius: 40px;
+border-radius: 25px;
+background-color: #6EB5F5;
   .index_text{
     color: inherit;
   }
-  svg{
-    background-color: #999;
-  }
+
 }
 
 body.root.experiments .exp-categories li:hover {
   color:#596dd5;
-  background-color: #666;
-  svg{
-    background-color: #666;
-  }
+
 }
 
 body.root.experiments .exp-categories .index_text a:hover{
@@ -142,6 +145,7 @@ body.root.experiments .exp-categories .index_text a:hover{
     margin-right: 2vw;
     margin-left: 2vw;
 }
+
 }
 @media (max-width: 1075px) {
   body.root.experiments .exp-categories .categories-list {
@@ -334,6 +338,30 @@ body.root.experiments .exp-list .big .exp-text {
 /* under 1450px making all experiments same size */
 @media (max-width: 1605px) {
   body.root.experiments .exp-list .big {
+    height: 500px;
+    width: 530px;
+    margin-left: 15px;
+    margin-right: 15px;
+
+}
+.big #exp_second_image_helper{
+    height: 376px;
+    width: 540px;
+  }
+body.root.experiments .exp-list .big .exp-thumbnail1 {
+  height: 376px;
+}
+
+body.root.experiments .exp-list .big:hover .exp-thumbnail2 {
+  height: 376px;
+}
+
+body.root.experiments .exp-list .big .exp-text {
+  top: 340px;
+}
+}
+@media (max-width: 1350px) {
+  body.root.experiments .exp-list .big {
     height: 400px;
     width: 426px;
     margin-left: 15px;
@@ -352,8 +380,18 @@ body.root.experiments .exp-list .big .exp-text {
   width:240px;
   top: 260px;
 }
-}
 
+#exp_second_image_helper{
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  height: 284px;
+  width: 426px;
+  overflow: hidden;
+}
+}
 #load_more_link {
   display: block;
   height: 60px;
@@ -384,3 +422,4 @@ body.root.experiments .exp-list li:not(:hover) {
   box-shadow: none;
 }
 }
+
