--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -44,6 +44,11 @@
     if user_signed_in?
       js << 'admin_scripts'
     end
+    if params[:controller] == 'root' && params[:action] == 'index'
+      js << 'snap.svg.min'
+      js << 'snap.svg.easing.min'
+      js << 'animate'
+    end
   %>
   <%= javascript_include_tag *(js) %>
 </head>
