--- a/app/assets/stylesheets/index_categories.scss
+++ b/app/assets/stylesheets/index_categories.scss
@@ -21,7 +21,7 @@
 /* Removing navbar search defaults*/
 
 body.root.index .navbar-form{
-  background-color: inherit;
+  background-color: #81BFFA;
 
 }
 body.root.index .search-input{
@@ -36,13 +36,13 @@ body.root.index .search-input{
 }
 
 body.root.index {
-	background-color: #70BAF7;
+	background-color: #81BFFA;
 }
 body.root.index .app-footer {
-	background-color: #70BAF7;
+	background-color: #81BFFA;
 }
 body.root.index .navbar-default {
-    background-color: #70BAF7;
+    background-color: #81bffa;
     border-color: #e7e7e7;
     border: 0;
     .navbar-brand {
@@ -53,52 +53,50 @@ body.root.index .navbar-default {
 body.root.index .about-element{
   font-family: 'BebasNeue-Bold';
   font-size: 20px;
-
 }
+
 body.root.index  .about-element a {
   color: #323C71;
 }
 
 body.root.index .container {
-
-width:98vw;
+  width:98vw;
 }
 
 /*  category blocks */
-body.root.index .index_categories{
-	text-align: center;
+
+body.root.index .index_categories ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
 }
+
 body.root.index .index_categories li{
-	display: inline-block;
 	margin: 15px;
   margin-top: 5px;
   margin-bottom: 25px;
 	color: #2D1E49;
-	text-align: center;
   height: 359.662px;
   width: 442.212px;
   position: relative;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 }
-body.root.index .categoty_image {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 0;
-}
+
 
 body.root.index .index_text {
   -moz-transition:0.80s;
   -webkit-transition:.8s;
   transition:0.8s;
   z-index: 100;
-  position: absolute;
   font-family: 'BebasNeue-Bold';
-  top: 240px;
   font-size: 38px;
+  letter-spacing: 10px;
   color:#2d1e49;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: 10px 0 40px 0;
 }
 /* hover*/
 body.root.index .index_categories li.category-item:hover {
@@ -130,22 +128,21 @@ body.root.index .index_text:not(:hover){
   color: #2d1e49;
 }
 body.root.index .index_categories li.category-item {
--moz-border-radius: 70px;
-border-radius: 70px;
-background-color: #6EB5F5;
-
+  -moz-border-radius: 70px;
+  border-radius: 70px;
+  background-color: #6EB5F5;
 }
+
 /* manages the text paragraph of the logo, seperate class because of seperate hover */
 body.root.index .logo .logo-text {
   z-index: 100;
-  position: absolute;
-  top: 270px;
   text-align: center;
   font-size: 13px;
-  left: 50%;
-  transform: translateX(-50%);
+  font-weight: 100;
   color: #2D1E49;
   font-family: 'DejaVuSans';
+  margin: 20px 0 20px 0;
+  letter-spacing: 1px;
 
 }
 /* logo div */
@@ -153,13 +150,6 @@ body.root.index .logo .logo-text {
 
 /* logo image*/
 
-body.root.index .logo_image{
-  position: absolute;
-  top: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-
-}
 body.root.index .index_categories .logo .hover-text{
   display: block;
   z-index: 100;
